--- a/Website/index.html
+++ b/Website/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suchi Patel</title>
+    <link rel="stylesheet" href="style.css" />
+    <script 
+        src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
+        crossorigin="anonymous"
+    ></script>
+
 </head>
 <body>
-    
+        <header class = "header">
+            <a href = "#About" class = "logo" >Suchi> 
+            <span>Patel</span> </a>
+
+
+        </header>
+
 </body>
 </html>
