--- a/Website/index.html
+++ b/Website/index.html
@@ -13,11 +13,17 @@
 </head>
 <body>
         <header class = "header">
-            <a href = "#About" class = "logo" >Suchi> 
+            <a href = "#home" class = "logo" >Suchi
             <span>Patel</span> </a>
+        
+        <nav class = "navbar">
+            <a href = "#home" class = "active" >Home</a>
+            <a href = "#About" > About</a>
+            <a href = "#Projects ">Projects </a>
+            <a href = "Contact"> Contact</a>
+        </nav>
+    </header>
 
-
-        </header>
-
+    <script scr = "script.js"></script>
 </body>
 </html>
